--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  max-width: 100vw;
+  max-width: 3000px;
   width: 100%;
   min-height: 100vh;
   margin: 0 auto;
