--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -58,7 +58,19 @@
   font-size: 10px;
   font-weight: 400;
   line-height: normal;
-  margin-bottom: 5px;
+  margin: 24px 0 5px;
+}
+
+.auth__label:first-of-type {
+  margin-top: 0;
+}
+
+.auth__error {
+  color: #EE3465;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: normal;
+  margin: 6px 0 0 0;
 }
 
 .auth__input {
@@ -71,7 +83,6 @@
   background: transparent;
   border-bottom: 1px solid #424242;
   padding: 0 0 10px;
-  margin-bottom: 24px;
   cursor: pointer;
 }
 
@@ -80,7 +91,7 @@
 }
 
 .auth__input::placeholder {
-  color: #FFF;
+  color: #fff;
 }
 
 .auth__button {
@@ -99,7 +110,7 @@
 }
 
 .auth__button:hover {
-  opacity: 0.8;
+  opacity: .8;
 }
 
 @media screen and (max-width:550px) {
@@ -136,7 +147,7 @@
 }
 
 .auth__link:hover {
-  opacity: 0.7;
+  opacity: .7;
 }
 
 @media screen and (max-width:550px) {
