--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -89,3 +89,10 @@
 .searchForm__button:hover {
   opacity: 0.8;
 }
+
+.searchForm__error {
+  color: #EE3465;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: normal;
+}
