--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,11 +1,3 @@
-.auth__error {
-  color: #EE3465;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: normal;
-  margin: 6px 0 0 0;
-}
-
 .auth__button-signup {
   margin-top: 134px;
 }
@@ -14,4 +6,55 @@
   .auth__button-signup {
     margin: 222px 0 14px;
   }
+}
+
+.auth__button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  background-color: #4285F4;
+  margin-top: 133px;
+  margin-bottom: 16px;
+  padding: 0;
+  height: 45px;
+  cursor: pointer;
+  border: none;
+  color: #FFF;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  transition: .8s;
+}
+
+.auth__button-container:hover {
+  opacity: .85;
+}
+
+.auth__button-container_active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  margin-top: 133px;
+  margin-bottom: 16px;
+  padding: 0;
+  height: 45px;
+  cursor: pointer;
+  border: none;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  transition: .8s;
+  color: #C2C2C2;
+  background-color: #F4F4F4;
+  cursor: not-allowed;
+}
+
+.auth__button-container_loading {
+  cursor: not-allowed;
+  color: #000000;
+  background-color: #F4F4F4;
 }
