--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -134,3 +134,11 @@
   line-height: normal;
   margin-top: 20px;
 }
+
+.profile__title-good {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: green;
+}
